--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-hr-component": "^2.0.3",
     "react-native-reanimated": "~1.2.0",
     "react-native-render-html": "^4.1.2",
     "react-native-web": "^0.11.7",
